<resources>
    <string name="app_name">CST2335 Final</string>
    <string name="triviaTitle">Trivia</string>
    <string name="songTitle">Songster</string>
    <string name="carTitle">Car DB</string>
    <string name="soccerTitle">Soccer</string>
    <string name="createdBy">Created by: </string>
    <string name="author1">Danny Pham-Duong 040991572 </string>
    <string name="author2">Marcelo Monterio 040989792 </string>
    <string name="author3">Janio Mendonca Junior 040990044</string>
    <string name="author4">Jia Liu 040992662 </string>
    <string name="since">Since 2021W</string>

    //Trivia Strings
    <string name="welcomeToTrivia">Welcome to Trivia</string>
    <string name="instructions">Before we start the game, let\'s quickly choose how you would like to play!</string>
    <string name="chooseDifficulty">Choose difficulty level:</string>
    <string name="chooseCategory">Select category:</string>
    <string name="chooseType">Choose type of questions:</string>
    <string name="booleanChoice">True or False</string>
    <string name="multipleChoice">Multiple Choice</string>
    <string name="anyChoice">Any type</string>
    <string name="quantityOfQuestions">Quantity of questions:</string>
    <string name="start">Start Game</string>
    <string name="choiceFalse">False</string>
    <string name="choiceTrue">True</string>
</resources>